# shh

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  shh_test_script.py  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
api-reference/adapters/: index.html
api-reference/cli/: index.html
api-reference/core/: index.html
architecture/design-decisions/: index.html
architecture/overview/: index.html
architecture/testing/: index.html
docs/: index.md
docs/api-reference/: adapters.md  cli.md  core.md
docs/architecture/: design-decisions.md  overview.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/superpowers/plans/: 2026-05-28-history-and-polish.md
docs/superpowers/specs/: 2026-05-28-history-and-polish-design.md
docs/user-guide/: commands.md  configuration.md  styles.md  translation.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
shh/adapters/audio/: processor.py  recorder.py
shh/adapters/clipboard/: manager.py
shh/adapters/history/: store.py
shh/adapters/llm/: formatter.py
shh/adapters/whisper/: client.py
shh/cli/: app.py
shh/cli/commands/: config.py  history.py  record.py  setup.py
shh/cli/ui/: __init__.py  base.py  history_picker.py  pipe_ui.py  quiet_ui.py  rich_ui.py
shh/config/: settings.py
shh/core/: models.py  styles.py
shh/services/: __init__.py  recording.py
shh/utils/: __init__.py  exceptions.py  logger.py
src/: README.md
stylesheets/: extra.css
tests/: conftest.py
tests/integration/: test_recording_flow.py
tests/unit/adapters/audio/: test_processor.py
tests/unit/adapters/history/: test_store.py
tests/unit/adapters/whisper/: test_client.py
tests/unit/cli/: test_commands.py  test_history_command.py  test_history_picker.py  test_pipe_ui.py  test_ui.py
tests/unit/config/: test_settings.py
tests/unit/core/: test_models.py
tests/unit/services/: test_recording_service.py
user-guide/commands/: index.html
user-guide/configuration/: index.html
user-guide/styles/: index.html
user-guide/translation/: index.html
