[project]
name = "shh"
version = "0.1.0"
description = "Voice transcription CLI powered by OpenAI Whisper"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    # CLI & UI
    "typer[all]>=0.12.0",
    "rich>=13.0.0",

    # HTTP & API
    "httpx>=0.27.0",
    "openai>=1.0.0",

    # LLM & Validation
    "pydantic-ai>=0.0.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Audio
    "sounddevice>=0.4.6",
    "scipy>=1.11.0",
    "numpy>=1.24.0",

    # Utilities
    "pyperclip>=1.8.2",
    "python-dotenv>=1.0.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
shh = "shh.cli.app:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC", "S", "B", "A", "C4", "RET", "SIM"]
ignore = ["ANN101", "ANN102"]  # Missing type annotation for self/cls

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "e2e: End-to-end tests with real APIs (deselect with '-m \"not e2e\"')",
]
