[project]
name = "shh"
version = "0.1.0"
description = "Voice transcription CLI powered by OpenAI Whisper"
requires-python = ">=3.11"
authors = [
    { name = "Marius Pruvot", email = "marius.pruvot@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["whisper", "transcription", "voice", "openai", "cli", "speech-to-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
    # CLI & UI
    "rich>=13.0.0",
    # HTTP & API
    "httpx>=0.27.0",
    "openai>=1.0.0",
    # LLM & Validation
    "pydantic-ai>=0.0.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Audio
    "sounddevice>=0.4.6",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    # Utilities
    "pyperclip>=1.8.2",
    "python-dotenv>=1.0.0",
    "platformdirs>=4.0.0",
    "typer>=0.20.0",
    "ipython>=9.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "poethepoet>=0.24.0",
    "scipy-stubs>=1.11.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://mariuspruvot.github.io/shh/"
Repository = "https://github.com/mariuspruvot/shh"
Documentation = "https://mariuspruvot.github.io/shh/"
Issues = "https://github.com/mariuspruvot/shh/issues"

[project.scripts]
shh = "shh.cli.app:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC", "S", "B", "A", "C4", "RET", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow asserts in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "e2e: End-to-end tests with real APIs (deselect with '-m \"not e2e\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.poe.tasks]
# Testing
test = "pytest"
test-cov = "pytest --cov=shh --cov-report=html --cov-report=term --cov-report=xml"
test-unit = "pytest tests/unit"
test-integration = "pytest tests/integration"
test-no-e2e = "pytest -m 'not e2e'"

# Code quality
lint = "ruff check ."
lint-fix = "ruff check . --fix"
type = "mypy --strict shh/"
format = "ruff format ."

# Combined checks
check = ["type", "lint", "test"]
fix = ["lint-fix", "format"]

# Development
clean = "rm -rf .pytest_cache .mypy_cache .ruff_cache htmlcov .coverage"

[dependency-groups]
dev = [
    "scipy-stubs>=1.16.3.3",
]
